--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
-    <application
+    <application android:theme="@android:style/Theme.Holo.Light"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
