--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,12 @@ before_install:
     - export ANDROID_HOME=$PWD/android-sdk-linux
     - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
 
+    # install android build tools
+    - wget https://dl-ssl.google.com/android/repository/build-tools_r19.0.3-linux.zip
+    - unzip build-tools_r19.0.3-linux.zip -d $ANDROID_HOME
+    - mkdir -p $ANDROID_HOME/build-tools/
+    - mv $ANDROID_HOME/android-4.4.2 $ANDROID_HOME/build-tools/19.0.3
+
     # Install required Android components.
     - echo y | android update sdk --filter platform-tools,android-19,extra-android-support --no-ui --force
 
